--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,9 +1,9 @@
-<div class="card mt-2">
-    <div class="d-flex card-header justify-content-between align-items-center">
-        <a href="/post/{{id}}" class="text-dark fs-4 text-decoration-none fw-bold">{{title}}</a>
+<div class="card mt-3 bg-dark overflow-hidden">
+    <div class="d-flex card-header justify-content-between align-items-center text-light">
+        <a href="/post/{{id}}" class="text-light fs-4 text-decoration-none fw-bold">{{title}}</a>
         <p class="m-0">Posted by {{user.username}} on {{format_date created_at}}</p>
     </div>
-  <div class="card-body">
+  <div class="card-body bg-light">
     <p class="card-text">{{content}}</p>
   </div>
 </div>
