--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,7 +41,7 @@
             </ul>
             <div class="d-flex">
               {{#if loggedIn}}
-                <a class="btn btn-outline-primary" href="/logout">Logout</a>
+                <a id="logout" class="btn btn-outline-primary">Logout</a>
               {{else}}
                 <a
                   class="text-dark btn btn-light px-3 py-1 rounded text-decoration-none fw-bold"
