add register form and logout function

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,5 @@
-<div class="d-flex justify-content-center mt-5">
+<div class="flex-grow-1 d-flex">
+  <div class="flex-grow-1 d-flex justify-content-center align-items-center">
   <div class="col-10 col-sm-9 col-md-6 col-lg-5 col-xl-4 p-5 bg-light rounded shadow">
     <form class="login-form">
       <!-- Email input -->
@@ -15,10 +16,11 @@
 
       <!-- Register buttons -->
       <div class="text-center">
-        <p>Not a member? <a href="/signup">Register</a></p>
+        <p>Don't have an account? <a href="/register">Register</a></p>
       </div>
     </form>
   </div>
+</div>
 </div>
 
 <script src="/javascript/login.js"></script>
