--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,7 +53,7 @@
         </div>
       </nav>
 
-      <main class="flex-grow-1">
+      <main class="flex-grow-1 d-flex flex-column">
         {{{body}}}
       </main>
 
