add ability to add comment to a post and delete a post

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="d-flex">
       <div class="col-md-12">
-        <h1 class="fw-bold">The Tech Blog</h1>
+        <h1 class="fw-bold">Your Dashboard</h1>
       </div>
     </div>
   </div>
@@ -10,6 +10,6 @@
 
 <div class="container">
     {{#each posts as |post|}}
-        {{> post-info post=post active_home=true }} 
+        {{> post-info post=post active_dashboard=true }}
     {{/each}}
 </div>
