--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
         <input type="password" id="password-login" placeholder="Password" class="form-control" />
       </div>
       <!-- Submit button -->
-      <button type="submit" class="btn btn-primary col-12 mb-4">Sign in</button>
+      <button type="submit" class="btn btn-dark col-12 mb-4">Sign in</button>
 
       <!-- Register buttons -->
       <div class="text-center">
