--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,7 +1,7 @@
 <div class="flex-grow-1 d-flex">
   <div class="flex-grow-1 d-flex justify-content-center align-items-center">
   <div class="col-10 col-sm-9 col-md-6 col-lg-5 col-xl-4 p-5 bg-light rounded shadow">
-    <form class="signup-form">
+    <form class="register-form">
         <!-- username input -->
         <div class="form-outline mb-4">
         <input type="text" id="username-register" placeholder="Username" class="form-control" />
@@ -16,7 +16,7 @@
         <input type="password" id="password-register" placeholder="Password" class="form-control" />
       </div>
       <!-- Submit button -->
-      <button type="submit" class="btn btn-primary col-12 mb-4">Register</button>
+      <button type="submit" class="btn btn-dark col-12 mb-4">Register</button>
 
       <!-- Register buttons -->
       <div class="text-center">
@@ -27,4 +27,4 @@
 </div>
 </div>
 
-<script src="/javascript/login.js"></script>
+<script src="/javascript/register.js"></script>
