add function to update post

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -31,8 +31,8 @@
           <label for="body">Content</label>
           <textarea
             class="form-control"
-            id="body"
-            name="body"
+            id="content"
+            name="content"
             rows="3"
           >{{post.content}}</textarea>
         </div>
@@ -42,7 +42,7 @@
     </div>
 
   </form>
-    
+
     <script src="/javascript/update-delete-post.js"></script>
 </div>
 
