add new post handlebars

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -13,3 +13,8 @@
         {{> post-info post=post active_dashboard=true }}
     {{/each}}
 </div>
+
+<!-- add new post btn -->
+<div class="text-center my-3">
+        <a href="/dashboard/new-post" class="btn btn-dark">Add new post</a>
+</div>
