--- a/views/post-comments.handlebars
+++ b/views/post-comments.handlebars
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="d-flex">
       <div class="col-md-12">
-        <h1 class="fw-bold">Post Details</h1>
+        <h1 class="fw-bold">Post Comments</h1>
       </div>
     </div>
   </div>
