--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,4 @@
-<div class="card mt-3 bg-dark overflow-hidden">
+<div class="card my-2 bg-dark overflow-hidden">
     <div class="d-flex card-header justify-content-between align-items-center text-light">
         <a href="{{#if active_dashboard}}/dashboard{{/if}}/post/{{id}}{{#if active_home}}/comments{{/if}}" class="text-light fs-4 text-decoration-none fw-bold">{{title}}</a>
         <p class="m-0">Posted by {{user.username}} on {{format_date created_at}}</p>
