--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,11 @@
 <div class="card my-2 bg-dark overflow-hidden">
-    <div class="d-flex card-header justify-content-between align-items-center text-light">
-        <a href="{{#if active_dashboard}}/dashboard{{/if}}/post/{{id}}{{#if active_home}}/comments{{/if}}" class="text-light fs-4 text-decoration-none fw-bold">{{title}}</a>
-        <p class="m-0">Posted by {{user.username}} on {{format_date created_at}}</p>
+    <div class="row card-header justify-content-between align-items-center text-light">
+        <div class="col-12 col-md-6">
+          <a href="{{#if active_dashboard}}/dashboard{{/if}}/post/{{id}}{{#if active_home}}/comments{{/if}}" class="text-light fs-4 text-decoration-none fw-bold">{{title}}</a>
+        </div>
+        <div class="col-12 col-md-6 text-md-end">
+          <p class="m-0">Posted by {{user.username}} on {{format_date created_at}}</p>
+        </div>
     </div>
   <div class="card-body bg-light">
     <p class="card-text">{{content}}</p>
